--- a/BookManager/BookManager/appsettings.json
+++ b/BookManager/BookManager/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "",
+    "ValidIssuer": "https://localhost:7175",
+    "Secret": "ThisIsTheSecretKey005320gjdsfgjhds6t0@)(#)%&*)*&#%^&iorguyh4309658oiert89437560548960125324634668787565834"
+  }
 }
